--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
 
   <groupId>com.github.hanwelmer</groupId>
   <artifactId>dasmZ80</artifactId>
-  <version>1.0.0</version>
   <packaging>jar</packaging>
 
   <name>DasmZ80</name>
@@ -45,4 +44,5 @@
     </plugins>
   </build>
 
+  <version>1.0.1-SNAPSHOT</version>
 </project>
