--- a/pom.xml
+++ b/pom.xml
@@ -5,21 +5,22 @@
   <groupId>com.github.hanwelmer</groupId>
   <artifactId>dasmZ80</artifactId>
   <packaging>jar</packaging>
+  <version>1.4.2-Snapshot</version>
 
   <name>DasmZ80</name>
   <url>http://maven.apache.org</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
+    <!-- we want JDK 1.11 source and binary compatiblility -->
+    <maven.compiler.release>11</maven.compiler.release>
   </properties>
 
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>4.8.1</version>
+      <version>4.13.2</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -44,5 +45,4 @@
     </plugins>
   </build>
 
-  <version>1.4.2-Snapshot</version>
 </project>
